<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.neighbormaterebuild.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.neighbormaterebuild.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.example.neighbormaterebuild.ui.keijiban.KeijibanFragment"
        android:label="@string/title_notification"
        tools:layout="@layout/fragment_keijiban" />

    <fragment
        android:id="@+id/navigation_point"
        android:name="com.example.neighbormaterebuild.ui.point.PointFragment"
        android:label="@string/title_point"
        tools:layout="@layout/fragment_point" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.neighbormaterebuild.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_chat"
            app:destination="@id/navigation_chat" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_point"
            app:destination="@id/navigation_point" />
    </fragment>

</navigation>